# BrownOppPact

./: README.md  package-lock.json
Backend/: pyproject.toml
Backend/Backend/: settings.py  urls.py
Backend/MatchEntry/: admin.py  apps.py  models.py  views.py
Backend/MatchEntry/migrations/: 0001_initial.py  0002_alter_matchentry_options_matchentry_summary.py  0003_alter_matchentry_summary.py  0004_matchentry_uuid.py  0005_matchentry_gender.py  0006_alter_matchentry_gender.py  0007_matchentry_score.py  0008_matchentry_permission_to_share.py  0009_matchentry_response.py  0010_remove_matchentry_response.py  0011_matchentry_classof.py  0012_alter_matchentry_classof.py  0013_matchentry_opp.py  0014_matchentry_disabled.py
Backend/email_templates/: confirmation.html  engagement.html  results.html  update.html
Backend/templates/admin/: index.html
Frontend/: nuxt.config.ts  package-lock.json  package.json
Frontend/assets/css/: font.css  main.css
Frontend/components/: button1.vue  footer_info.vue  leftbar.vue  socialMedia.vue
Frontend/layouts/: default.vue
Frontend/pages/: closed.vue  index.vue  match copy.vue  match.vue  result.vue
