[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AntoDono",email = "anthony20151128@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
